Not using bash anymore

--- a/local-playbook.yaml
+++ b/local-playbook.yaml
@@ -111,10 +111,10 @@
         - name: add go path to dot profile
           ansible.builtin.lineinfile:
             line: export PATH=$PATH:/usr/local/go/bin
-            path: /home/{{ ansible_user }}/.profile
+            path: /home/{{ ansible_user }}/.zshrc
 
-        - name: source .profile
-          ansible.builtin.shell: ". /home/{{ ansible_user }}/.profile"
+        - name: source .zshrc
+          ansible.builtin.shell: ". /home/{{ ansible_user }}/.zshrc"
             
 #### Install Dropbox
 
